MEC Production/MEC Production/src/objects/Product_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products Details</relationshipLabel>
        <relationshipName>Products_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Front_Margin__c</fullName>
        <label>Front Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Details</relationshipLabel>
        <relationshipName>Products_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Sell_Out__c</fullName>
        <formula>CEILING( 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommended Sell Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Details</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Product Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>